@@ -41,6 +41,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #18013: Fix cgi.FieldStorage to parse the W3C sample form.
+
 - Issue #18347: ElementTree's html serializer now preserves the case of
   closing tags.
 
